toolkit/themes/shared/in-content/common.inc.css
/* ... */
html
|
a
:
hover
:
active
xul
|
*
.
text
-
link
:
hover
:
active
xul
|
*
.
inline
-
link
:
hover
:
active
{
color
:
#
ff9500
;
text
-
decoration
:
none
;
}
xul
|
checkbox
{
-
moz
-
margin
-
start
:
0
;
}
xul
|
*
.
checkbox
-
check
{
-
moz
-
appearance
:
none
;
width
:
23px
;
height
:
23px
;
border
-
radius
:
2px
;
border
:
1px
solid
#
c1c1c1
;
-
moz
-
margin
-
end
:
10px
;
background
-
color
:
#
f1f1f1
;
background
-
image
:
linear
-
gradient
(
#
fff
rgba
(
255
255
255
0
.
8
)
)
;
background
-
position
:
center
center
;
background
-
repeat
:
no
-
repeat
;
box
-
shadow
:
0
1px
1px
0
#
fff
inset
0
2px
0
0
rgba
(
0
0
0
0
.
03
)
;
}
xul
|
checkbox
:
not
(
[
disabled
=
"
true
"
]
)
:
hover
>
xul
|
*
.
checkbox
-
check
{
border
-
color
:
#
0095dd
;
}
xul
|
*
.
checkbox
-
check
[
checked
]
{
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
in
-
content
/
check
.
png
"
)
linear
-
gradient
(
#
fff
rgba
(
255
255
255
0
.
8
)
)
!
important
;
}
xul
|
checkbox
[
disabled
=
"
true
"
]
>
xul
|
*
.
checkbox
-
check
{
opacity
:
0
.
5
;
}
xul
|
*
.
checkbox
-
label
-
box
{
-
moz
-
margin
-
start
:
-
1px
;
-
moz
-
padding
-
start
:
0
;
}
media
(
min
-
resolution
:
2dppx
)
{
xul
|
*
.
checkbox
-
check
[
checked
]
{
background
-
size
:
12px
12px
auto
;
background
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
in
-
content
/
check
2x
.
png
"
)
linear
-
gradient
(
#
fff
rgba
(
255
255
255
0
.
8
)
)
!
important
;
}
}
xul
|
richlistitem
>
xul
|
*
.
checkbox
-
check
{
margin
:
3px
6px
;
}
xul
|
*
.
radio
-
check
{
-
moz
-
appearance
:
none
;
width
:
23px
;
height
:
23px
;
border
:
1px
solid
#
c1c1c1
;
border
-
radius
:
50
%
;
-
moz
-
margin
-
end
:
10px
;
background
-
color
:
#
f1f1f1
;
background
-
image
:
linear
-
gradient
(
#
fff
rgba
(
255
255
255
0
.
80
)
)
;
box
-
shadow
:
0
1px
1px
0
#
fff
inset
0
2px
0
0
rgba
(
0
0
0
0
.
03
)
;
}
xul
|
radio
:
not
(
[
disabled
=
"
true
"
]
)
:
hover
>
xul
|
*
.
radio
-
check
{
border
-
color
:
#
0095dd
;
}
xul
|
*
.
radio
-
check
[
selected
]
{
background
-
image
:
radial
-
gradient
(
circle
rgb
(
23
146
229
)
rgb
(
76
177
255
)
5
.
5px
rgba
(
76
177
255
0
.
2
)
6px
transparent
6px
)
linear
-
gradient
(
rgb
(
255
255
255
)
rgba
(
255
255
255
0
.
8
)
)
;
}
xul
|
radio
[
disabled
=
"
true
"
]
>
xul
|
*
.
radio
-
check
{
opacity
:
0
.
5
;
}
xul
|
*
.
radio
-
label
-
box
{
-
moz
-
margin
-
start
:
-
1px
;
-
moz
-
margin
-
end
:
10px
;
-
moz
-
padding
-
start
:
0
;
}
xul
|
*
#
categories
{
-
moz
-
appearance
:
none
;
background
-
color
:
#
424f5a
;
padding
-
top
:
39px
;
margin
:
0
;
}
xul
|
*
.
category
{
-
moz
-
appearance
:
none
;
color
:
#
c1c1c1
;
-
moz
-
border
-
end
-
width
:
0
;
-
moz
-
padding
-
start
:
15px
;
-
moz
-
padding
-
end
:
21px
;
min
-
height
:
40px
;
transition
:
background
-
color
150ms
;
}
xul
|
*
.
category
:
hover
{
background
-
color
:
#
5e6972
;
}
xul
|
*
.
category
[
selected
]
{
background
-
color
:
#
343f48
;
color
:
#
f2f2f2
;
-
moz
-
padding
-
start
:
11px
;
-
moz
-
border
-
start
:
solid
4px
#
ff9500
;
}
xul
|
*
#
categories
[
keyboard
-
navigation
=
"
true
"
]
:
-
moz
-
focusring
>
xul
|
*
.
category
[
current
]
{
border
-
top
:
1px
#
ffffff
dotted
;
border
-
bottom
:
1px
#
ffffff
dotted
;
}
*
|
*
.
category
-
name
{
line
-
height
:
22px
;
font
-
size
:
1
.
25rem
;
padding
-
bottom
:
2px
;
-
moz
-
padding
-
start
:
9px
;
margin
:
0
;
}
*
|
*
.
category
-
icon
{
width
:
24px
;
height
:
24px
;
}
*
|
*
.
header
{
border
-
bottom
:
1px
solid
#
c8c8c8
;
margin
-
bottom
:
15px
;
padding
-
bottom
:
15px
;
}
*
|
*
.
header
-
name
{
font
-
size
:
2
.
5rem
;
font
-
weight
:
normal
;
line
-
height
:
40px
;
margin
:
0
;
}
xul
|
filefield
{
-
moz
-
appearance
:
none
;
background
-
color
:
transparent
;
border
:
none
;
padding
:
0
;
}
xul
|
*
.
fileFieldContentBox
{
background
-
color
:
transparent
;
}
xul
|
*
.
fileFieldIcon
{
-
moz
-
margin
-
start
:
10px
;
-
moz
-
margin
-
end
:
0
;
}
xul
|
*
.
fileFieldLabel
{
-
moz
-
margin
-
start
:
-
26px
;
-
moz
-
padding
-
start
:
36px
;
}
xul
|
textbox
:
-
moz
-
locale
-
dir
(
rtl
)
xul
|
*
.
fileFieldLabel
:
-
moz
-
locale
-
dir
(
rtl
)
xul
|
textbox
+
xul
|
button
:
-
moz
-
locale
-
dir
(
ltr
)
xul
|
filefield
+
xul
|
button
:
-
moz
-
locale
-
dir
(
ltr
)
{
border
-
top
-
left
-
radius
:
0
;
border
-
bottom
-
left
-
radius
:
0
;
}
xul
|
textbox
:
-
moz
-
locale
-
dir
(
ltr
)
xul
|
*
.
fileFieldLabel
:
-
moz
-
locale
-
dir
(
ltr
)
xul
|
textbox
+
xul
|
button
:
-
moz
-
locale
-
dir
(
rtl
)
xul
|
filefield
+
xul
|
button
:
-
moz
-
locale
-
dir
(
rtl
)
{
border
-
top
-
right
-
radius
:
0
;
border
-
bottom
-
right
-
radius
:
0
;
}
xul
|
textbox
+
xul
|
button
xul
|
filefield
+
xul
|
button
{
-
moz
-
border
-
start
:
none
;
}

