Bug 1022582 - Make in-content checkboxes and radiobuttons visible on HC themes. r=jaws
UltraBlame original commit: 56ba684600e15eb9d47945cce8d2180df1d5448f

--- a/toolkit/themes/shared/in-content/common.inc.css
+++ b/toolkit/themes/shared/in-content/common.inc.css
@@ -2666,6 +2666,8 @@ rgba
 8
 )
 )
+!
+important
 ;
 background
 -
@@ -2752,7 +2754,9 @@ check
 checked
 ]
 {
-background
+list
+-
+style
 -
 image
 :
@@ -2773,27 +2777,11 @@ content
 /
 check
 .
-png
+svg
+#
+check
 "
 )
-linear
--
-gradient
-(
-#
-fff
-rgba
-(
-255
-255
-255
-0
-.
-8
-)
-)
-!
-important
 ;
 }
 xul
@@ -2851,80 +2839,6 @@ start
 :
 0
 ;
-}
-media
-(
-min
--
-resolution
-:
-2dppx
-)
-{
-xul
-|
-*
-.
-checkbox
--
-check
-[
-checked
-]
-{
-background
--
-size
-:
-12px
-12px
-auto
-;
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-in
--
-content
-/
-check
-2x
-.
-png
-"
-)
-linear
--
-gradient
-(
-#
-fff
-rgba
-(
-255
-255
-255
-0
-.
-8
-)
-)
-!
-important
-;
-}
 }
 xul
 |
@@ -3088,62 +3002,33 @@ check
 selected
 ]
 {
-background
+list
+-
+style
 -
 image
 :
-radial
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+in
 -
-gradient
-(
-circle
-rgb
-(
-23
-146
-229
-)
-rgb
-(
-76
-177
-255
-)
-5
+content
+/
+radio
 .
-5px
-rgba
-(
-76
-177
-255
-0
-.
-2
-)
-6px
-transparent
-6px
-)
-linear
--
-gradient
-(
-rgb
-(
-255
-255
-255
-)
-rgba
-(
-255
-255
-255
-0
-.
-8
-)
+svg
+#
+radio
+"
 )
 ;
 }
